# berty

./: .codecov.yml  .crowdin.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .gometalinter.json  .goreleaser.yml  .prettierignore  .releaserc.js  .stickler.yml  .swiftlint.yml  .tool-versions  BUILD.bazel  Berty  CODE_OF_CONDUCT.md  CONTRIBUTE.MD  CONTRIBUTING.MD  CONTRIBUTING_GO.md  COPYRIGHT  Dockerfile  Dockerfile.scw  Gopkg.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  WORKSPACE  bazel.make  buf.gen.tag.yaml  buf.gen.yaml  codecov.yml  deprecated.go  doc.go  go.mod  go.sum  mage_hashtarget.go  (+7 more)
api/: BUILD.bazel  Makefile  accounttypes.proto  accounttypes.yaml  baz.proto  bertyaccount.proto  bertybridge.proto  bertychat.proto  bertydemo.proto  bertydirectory.proto  bertydirectory.yaml  bertymessenger.proto  bertymessenger.yaml  bertyprotocol.proto  bertyprotocol.yaml  bertyprotocol_core.proto  bertyprotocol_gody.proto  bertypush.proto  bertypush.yaml  bertyreplication.proto  bertyreplication.yaml  bertytypes.proto  bertyverifiablecreds.proto  bertyverifiablecreds.yaml  buf.yaml  chaterrcode.proto  chatmodel.proto  entity.proto  errcode.proto  messengertypes.proto  messengertypes.yaml  protocolerrcode.proto  protocolmodel.proto  protocoltypes.proto  protocoltypes.yaml  pushtypes.proto  pushtypes.yaml
api/accounttypes/: accounttypes.proto
api/berty/: errcode.proto
api/bertybridge/: bertybridge.proto
api/directorytypes/: bertydirectory.proto
api/go-internal/: crypto_envelope.proto  crypto_group.proto  crypto_group_member.proto  crypto_sigchain.proto  crypto_sigchain_entry.proto  handshake.proto  localrecord.proto  log_entry_member.proto  log_entry_message.proto  log_entry_secret.proto  log_entry_setting.proto  protocolmodel.proto  records.proto  sigchain.proto  sql_datastore_config.proto  sql_datastore_group.proto  sql_datastore_group_member.proto  sql_datastore_sigchain.proto  store_entry.proto  testutil.proto
api/internal/: BUILD.bazel  bar.proto  crypto_sigchain.proto  crypto_sigchain_entry.proto  foo.proto  handshake.proto  log_entry_member.proto  log_entry_message.proto  log_entry_secret.proto  protocolmodel.proto  sigchain.proto
api/js-internal/: bertychat.proto  chat.proto  chatmodel.proto
api/messengertypes/: messengertypes.proto
api/pushtypes/: bertypushtypes.proto
api/replicationtypes/: bertyreplication.proto
api/verifiablecredstypes/: bertyverifiablecreds.proto
go/: .bazel_fix_commands.json  .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  bazel.make  config.bzl  gen.sum  go.mod  go.sum  repositories.bzl  shell.nix
go/WIP/: debug.go
go/assets/: example_test.go  pkged.go
go/cmd/berty/: account_daemon.go  banner.go  daemon.go  depaware.txt  directory_service.go  doc.go  export.go  groupinit.go  gui.go  main.go  main_test.go  mini.go  noopgui.go  omnisearch.go  opts.go  p2p.go  peers.go  push.go  relay.go  remotelogs.go  replication.go  scenario_test.go  servicekey.go  shareinvite.go  systeminfo.go  token.go  utils.go  vc_issuer.go  version.go
go/cmd/berty-doctor/: depaware.txt  main.go  rdvp.go
go/cmd/berty-integration/: README.md  depaware.txt  main.go  main_unsupported.go
go/cmd/berty-mini/: main.go
go/cmd/bertychat/: BUILD.bazel  doc.go  main.go
go/cmd/bertydoctor/: rdvp.go
go/cmd/betabot/: README.md  depaware.txt  main.go
go/cmd/cmcbot/: cmc.go  main.go
go/cmd/gen-build-profile-graph/: main.go
go/cmd/gen-fixtures-events/: client.go  daemon.go  infra.go  main.go
go/cmd/publish-npm-package/: main.go
go/cmd/rdvp/: depaware.txt  doc.go  main.go
go/cmd/testbot/: README.md  example_test.go  main.go
go/cmd/twitterbot/: config.go  embed.go  (+2 more)
go/localization/: localization.go  localization_test.go
js/: .bazelrc  .depcheckrc  .eslintignore  .eslintrc.js  .esprintrc  .gitignore  .pbjs-flags.json  .prettierrc.js  .snyk  .svgrrc  .tool-versions  BUILD.bazel  Gemfile  Makefile  README.md  WORKSPACE  alias.js  app.json  assetsTransformer.js  babel.config.js  fix-types.js  fix-types.sh  gen.make  gen.sum  gen_tsconfig_paths.js  global.d.ts  go.mod  go.sum  index.js  index.ts  jest-setup.js  jest.config.js  jest.setup.js  lerna.json  metro.config.js  package-lock.json  package.json  prettier.config.js  react-native.config.js  test  (+1 more)
js/.storybook/: Storybook.tsx  addons.tsx  index.tsx  main.js  preview.js  provider.js  storybook.requires.js
js/__mocks__/: assetMock.js  lottie-react-native.js  react-native-device-info.js  react-native-fs.js  react-native-gesture-handler.js  react-native-image-crop-picker.js  react-native-permissions.js  react-native-push-notification.js  react-native-qrcode-svg.js  react-native-reanimated.js  react-native-screens.js  react-native-svg.js  react-native.js  rn-fetch-blob.js  svgMock.js
js/android/: .gitignore  build.gradle  gradle.properties  gradlew.bat  settings.gradle
js/e2e-tests/: .eslintrc  README.md  basic.js  lib.js  package-lock.json  package.json  send-message.js
js/electron/: index.html  main.js  preload.js
js/electron-app/: .gitignore  README.md  craco.config.js  package.json  tsconfig.main.json
js/fastlane/: Pluginfile
js/ios/: .gitignore  .tor-version  .xcode-version  Gemfile  OpenSSL-Universal-Override.podspec  Podfile  berty.yaml  info.yaml  targets.yaml
js/makefiles/: api.mk  berty-app.mk  codegen.mk  gen.mk  go-bridge.mk  storybook-mobile.mk  storybook-web.mk
js/patches/: @react-native-community+audio-toolkit+2.0.3.patch  @react-native-community+blur+3.6.0.patch  @ui-kitten+components+5.1.1.patch  expo-constants+13.0.2.patch  icon-font-generator+2.1.11.patch  react-native+0.63.4.patch  react-native+0.64.2.patch  react-native+0.64.4.patch  react-native+0.66.3.patch  react-native-inappbrowser-reborn+3.6.3.patch  react-native-qrcode-svg+6.1.1.patch  react-native-reanimated+2.3.1.patch  react-native-scrollable-tab-view+1.0.0.patch  rn-fetch-blob+0.12.0.patch
js/web/: craco.config.js  package.json  tsconfig.json  tsconfig.main.json  webpack.main.config.js
(+4410 files in other folders)
