load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix berty.tech/go
# gazelle:proto disable_global
# gazelle:exclude vendor/golang.org/x/crypto/ed25519/ed25519_go113.go
# gazelle:resolve go github.com/grpc-ecosystem/grpc-gateway/internal //vendor/github.com/grpc-ecosystem/grpc-gateway/internal:go_default_library
gazelle(
    name = "gazelle",
    external = "vendored",
)

load("@com_github_atlassian_bazel_tools//golangcilint:def.bzl", "golangcilint")

golangcilint(
    name = "golangcilint",
    config = "//:.golangci.yml",
    paths = [
        "cmd/...",
        "pkg/...",
        "internal/...",
    ],
    prefix = "berty.tech/go",
)
