load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix berty.tech/go
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
    external = "vendored",
)

load("@com_github_atlassian_bazel_tools//golangcilint:def.bzl", "golangcilint")

golangcilint(
    name = "golangcilint",
    config = "//:.golangci.yml",
    paths = [
        "cmd/...",
        "pkg/...",
        "internal/...",
    ],
    prefix = "berty.tech/go",
)
