load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bar_proto",
    srcs = ["bar.proto"],
    visibility = ["//visibility:public"],
    deps = [":foo_proto"],
)

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    strip_import_prefix = "/api",
    visibility = ["//visibility:public"],
    deps = [
        "@gogo_special_proto//github.com/gogo/protobuf/gogoproto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "bar_go_proto",
    importpath = "berty.tech/go/internal/bar",
    proto = ":bar_proto",
    visibility = ["//visibility:public"],
    deps = [":foo_go_proto"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "berty.tech/go/internal/foo",
    proto = ":foo_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gogo_protobuf//gogoproto:go_default_library"],
)
