load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "berty.tech/go/cmd/bertychat",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/banner:go_default_library",
        "@com_github_peterbourgon_ff//:go_default_library",
        "@com_github_peterbourgon_ff//ffcli:go_default_library",
    ],
)

go_binary(
    name = "bertychat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
