load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "banner.go",
        "quote.go",
    ],
    importpath = "berty.tech/go/internal/banner",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["banner_test.go"],
    embed = [":go_default_library"],
)
