load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "dht.go",
    ],
    importpath = "berty.tech/berty/experiment/dht/src/matrix",
    visibility = ["//visibility:public"],
    deps = [
        "//dht:go_default_library",
        "@com_github_matrix_org_gomatrix//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["dht_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_smartystreets_goconvey//convey:go_default_library"],
)
